28 January 2026 : follow the tutorial for a simple [mininal] functionnal Panel