@@ -1,20 +1,20 @@
-// COLORS PALETTE
+// COLORS PALETTE - Catppuccin
 
 const TRANSPARENT_LIGHT = "#ffffff00"
 
 const TRANSPARENT_BLACK = "#00000000"
 
-const BLACK = "#000000"
+const BLACK = "#1e1e2e"
 
-const WHITE = "#ffffff"
+const WHITE = "#cdd6f4"
 
-const RED = "#ff0000"
+const RED = "#f38ba8"
 
-const GREEN = "#00ff00"
+const GREEN = "#a6e3a1"
 
-const BLUE = "#0000ff"
+const BLUE = "#89b4fa"
 
-const LIGHT_BLUE = "#00ffff"
+const LIGHT_BLUE = "#89dceb"
 
 // GENERAL
 const LABEL = WHITE
@@ -25,4 +25,13 @@ const BACKGROUND_COLOR = BLACK
 
 const TITLE = GREEN
 
+const fontFamily = "JetBrainsMono Nerd Font"
+
 // SYSTEM TRAY
+
+const WORKSPACE_INACTIVE = "#45475a"
+const WORKSPACE_CURRENT = "#89dceb"
+const WORKSPACE_ACTIVE = "#89b4fa"
+const CPU = "#f9e2af"
+const MEMORY = "#eba0ac"
+const TEMP = "#fab387"
