@@ -1,98 +1,0 @@
-import QtQuick
-import Quickshell
-import Quickshell.Io 
-import QtQuick.Layouts
-import "config/config.js" as Config
-import "config/colors.js" as Colors
-
-PanelWindow {
-    id: root
-    // Theme
-    property color colBg: "#1a1b26"
-    property color colFg: "#a9b1d6"
-    property color colMuted: "#444b6a"
-    property color colCyan: "#0db9d7"
-    property color colBlue: "#7aa2f7"
-    property color colYellow: "#e0af68"
-    property string fontFamily: "JetBrainsMono Nerd Font"
-    property int fontSize: 14
-
-    // System data
-    property int cpuUsage: 0
-    property int memUsage: 0
-    property var lastCpuIdle: 0
-    property var lastCpuTotal: 0
-
-    // Processes and timers here...
-    anchors.bottom: true
-    anchors.top: false
-    anchors.left: true
-    anchors.right: true
-    implicitHeight: 30
-    color: root.colBg
-
-    RowLayout {
-        anchors.fill: parent
-        anchors.margins: 8
-        spacing: 8
-
-		Text {
-			color : colFg
-			text : "󰣇"
-			MouseArea {
-                anchors.fill: parent
-                onClicked: Hyprland.dispatch("exec rofi -show drun")
-        	}
-		}
-
-        // Workspaces
-        Repeater {
-            model: 9
-            Text {
-                property var ws: Hyprland.workspaces.values.find(w => w.id === index + 1)
-                property bool isActive: Hyprland.focusedWorkspace?.id === (index + 1)
-                text: index + 1
-                color: isActive ? root.colCyan : (ws ? root.colBlue : root.colMuted)
-                font { family: root.fontFamily; pixelSize: root.fontSize; bold: true }
-                MouseArea {
-                    anchors.fill: parent
-                    onClicked: Hyprland.dispatch("workspace " + (index + 1))
-                }
-            }
-        }
-
-        Item { Layout.fillWidth: true }
-
-        // CPU
-        Text {
-            text: "CPU: " + cpuUsage + "%"
-            color: root.colYellow
-            font { family: root.fontFamily; pixelSize: root.fontSize; bold: true }
-        }
-
-        Rectangle { width: 1; height: 16; color: root.colMuted }
-
-        // Memory
-        Text {
-            text: "Mem: " + memUsage + "%"
-            color: root.colCyan
-            font { family: root.fontFamily; pixelSize: root.fontSize; bold: true }
-        }
-
-        Rectangle { width: 1; height: 16; color: root.colMuted }
-
-        // Clock
-        Text {
-            id: clock
-            color: root.colBlue
-            font { family: root.fontFamily; pixelSize: root.fontSize; bold: true }
-            text: Qt.formatDateTime(new Date(), "ddd, MMM dd - HH:mm")
-            Timer {
-                interval: 1000
-                running: true
-                repeat: true
-                onTriggered: clock.text = Qt.formatDateTime(new Date(), "ddd, MMM dd - HH:mm")
-            }
-        }
-    }
-}
