@@ -1,1 +1,7 @@
-28 January 2026 : follow the tutorial for a simple [mininal] functionnal Panel
+# Changelog
+
+28 January 2026 : 
+
+- follow the tutorial for a simple [mininal] functionnal Panel
+- put tony btw bar into the one from quickshell 
+- start of the gui prototype
